# salt-mcp-server

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  IDEAS.md  LICENSE  Makefile  README.md  TASKS.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
autoresearch/: results.tsv
docs/: install.md  runbook.md  security.md
docs/integrations/: claude-code.md  codex.md  continue.md  copilot.md  cursor.md
packaging/: salt-cisco-mcp.service
salt_cisco_mcp/: audit.py  cli.py  config.py  install_cmd.py  logging_config.py  server.py  transports.py  verify.py
salt_cisco_mcp/docs/: chunker.py  embedder.py  indexer.py  normalizer.py  reranker.py  retriever.py  scraper.py  store.py
salt_cisco_mcp/hallucination/: corpus_loader.py  resolution.py
salt_cisco_mcp/live/: fallback.py
salt_cisco_mcp/observability/: log.py  metrics.py
salt_cisco_mcp/prompts/: debug_failing_state.py  draft_state_for_cisco.py  generate_proxy_pillar.py  migrate_legacy_syntax.py
salt_cisco_mcp/resources/: salt_docs.py  salt_master.py
salt_cisco_mcp/salt_master/: adapter.py  dry_run.py  module_introspect.py  pillar_reader.py  redactor.py  write_ops.py
salt_cisco_mcp/tools/: audit_cisco_config.py  confirm_function_exists.py  generate_pillar.py  get_doc.py  get_grains.py  get_pillar.py  list_loaded_functions.py  list_minions.py  list_modules.py  live_fetch.py  push_config.py  render_jinja.py  search_docs.py  state_apply.py  state_show_sls.py  state_test.py  validate_pillar.py  validate_state.py
salt_cisco_mcp/validate/: cisco_audit.py  jinja_preview.py  pillar_schema.py  state_lint.py
tests/: test_deps_and_config.py  test_infrastructure.py  test_package.py  test_stdio_safety.py  test_v1_release.py
tests/cli/: test_install_cmd.py
tests/docs/: golden_queries.yaml  test_chunker.py  test_embedder.py  test_golden_queries.py  test_indexer.py  test_integration_docs.py  test_normalizer.py  test_reranker.py  test_retriever.py  test_scraper.py  test_store.py
tests/e2e/: test_persona_a1.py
tests/hallucination/: test_ci_gate.py  test_corpus_loader.py  test_resolution.py
tests/integration/: test_air_gap.py  test_docs_pipeline_e2e.py  test_mcp_transport.py  test_placeholder.py  test_tools_e2e.py  test_write_e2e.py
tests/live/: test_fallback.py
tests/observability/: test_metrics.py  test_tool_logger.py
tests/packaging/: test_pypi_workflow.py  test_systemd.py
tests/performance/: conftest.py  test_cold_start.py  test_rss.py  test_search_docs_perf.py  test_validate_perf.py
tests/prompts/: test_prompts.py
tests/resources/: test_salt_docs_resources.py  test_salt_master_resources.py
tests/salt_master/: test_adapter.py  test_dry_run.py  test_integration.py  test_module_introspect.py  test_pillar_reader.py  test_redactor.py  test_write_ops.py
tests/security/: test_path_traversal.py  test_redaction.py  test_subprocess_safety.py  test_write_gate.py
tests/server/: test_server.py  test_transports.py
tests/tools/: test_confirm_function_exists.py  test_dry_run_tools.py  test_get_doc.py  test_get_grains.py  test_get_pillar.py  test_hallucination_smoke.py  test_list_loaded_functions.py  test_list_minions.py  test_list_modules.py  test_live_fetch.py  test_search_docs.py  test_validate_tools.py  (+1 more)
(+110 files in other folders)
