[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "salt-cisco-mcp"
dynamic = ["version"]
description = "Offline-first MCP server for Salt-driven Cisco IOS/IOS-XR/NX-OS automation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<3.13"
authors = [{ name = "salt-cisco-mcp contributors" }]
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2",
    "pydantic-settings>=2",
    "httpx>=0.27",
    "anyio>=4",
    "structlog>=24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4",
    "ruff>=0.4",
    "mypy>=1.10",
    "hatch>=1.12",
    "pytest-cov>=5",
    "pyyaml>=6",
]

[project.scripts]
salt-cisco-mcp = "salt_cisco_mcp.cli:main"

[tool.hatch.version]
path = "salt_cisco_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["salt_cisco_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = []

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=salt_cisco_mcp --cov-fail-under=85"
