[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "salt-cisco-mcp"
dynamic = ["version"]
description = "Offline-first MCP server for Salt-driven Cisco IOS/IOS-XR/NX-OS automation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<3.13"
authors = [{ name = "salt-cisco-mcp contributors" }]
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2",
    "pydantic-settings>=2",
    "httpx>=0.27",
    "anyio>=4",
    "structlog>=24",
    "pyyaml>=6",
    "selectolax>=0.3",
    "markdownify>=0.11",
    "sqlite-vec>=0.1.6",
    "jinja2>=3",
]

[project.optional-dependencies]
embeddings = [
    "fastembed>=0.2",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4",
    "ruff>=0.4",
    "mypy>=1.10",
    "hatch>=1.12",
    "pytest-cov>=5",
    "psutil>=5",
    "types-PyYAML>=6",
    "types-jsonschema>=4",
]

[project.scripts]
salt-cisco-mcp = "salt_cisco_mcp.cli:main"

[tool.hatch.version]
path = "salt_cisco_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["salt_cisco_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = []

[tool.mypy]
strict = true
python_version = "3.10"

[[tool.mypy.overrides]]
module = ["jinja2", "jinja2.*", "sqlite_vec", "fastembed"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=salt_cisco_mcp --cov-fail-under=85"
